--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/><link rel="manifest" href="/manifest.json"/><title>React App</title><script defer="defer" src="/static/js/main.806a1480.js"></script><link href="/static/css/main.82f8aa4b.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" />
+
+    <!-- Mobile & Responsive -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#000000" />
+
+    <!-- SEO Description -->
+    <meta
+      name="description"
+      content="Frontend developer building modern, responsive websites using React and Tailwind CSS. Available for freelance projects."
+    />
+
+    <!-- Apple Touch Icon (optional but fine to keep) -->
+    <link rel="apple-touch-icon" href="/logo192.png" />
+
+    <!-- Font Awesome (used in earlier code, safe to keep) -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+
+    <!-- Web App Manifest -->
+    <link rel="manifest" href="/manifest.json" />
+
+    <!-- Page Title -->
+    <title>Shahil | Frontend Developer</title>
+  </head>
+
+  <body>
+    <noscript>You need to enable JavaScript to run this website.</noscript>
+    <div id="root"></div>
+  </body>
+</html>
