Refactor portfolio UI Enhanced

--- a/index.html
+++ b/index.html
@@ -3,38 +3,40 @@
   <head>
     <meta charset="utf-8" />
 
-    <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" />
 
-    <!-- Mobile & Responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Theme Color -->
     <meta name="theme-color" content="#000000" />
 
-    <!-- SEO Description -->
-    <meta
-      name="description"
-      content="Frontend developer building modern, responsive websites using React and Tailwind CSS. Available for freelance projects."
+    <title>Shahil Khan | Full-Stack Developer & Android Enthusiast</title>
+    <meta 
+      name="description" 
+      content="Professional Full-Stack Developer specializing in React, Node.js, and Android (Kotlin). Building secure, high-performance web and mobile solutions for startups and small businesses." 
     />
+    <meta name="keywords" content="Full Stack Developer, React Developer, Node.js, Android Developer, Kotlin, Freelance Web Developer, Secure Web Apps, Shahil Khan Portfolio" />
+    <meta name="author" content="Shahil Khan" />
 
-    <!-- Apple Touch Icon (optional but fine to keep) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://your-portfolio-link.com/" />
+    <meta property="og:title" content="Shahil Khan | Full-Stack & Android Developer" />
+    <meta property="og:description" content="Turning ideas into digital reality with high-performance web solutions and secure Android applications." />
+    <meta property="og:image" content="/og-image.png" /> <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://your-portfolio-link.com/" />
+    <meta property="twitter:title" content="Shahil Khan | Full-Stack Developer" />
+    <meta property="twitter:description" content="Specializing in React, Node.js, and Kotlin. Let's build something secure and scalable." />
+    <meta property="twitter:image" content="/og-image.png" />
+
     <link rel="apple-touch-icon" href="/logo192.png" />
 
-    <!-- Font Awesome (used in earlier code, safe to keep) -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
-
-    <!-- Web App Manifest -->
     <link rel="manifest" href="/manifest.json" />
 
-    <!-- Page Title -->
-    <title>Shahil | Frontend Developer</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Plus+Jakarta+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
   </head>
 
-  <body>
+  <body class="bg-black">
     <noscript>You need to enable JavaScript to run this website.</noscript>
     <div id="root"></div>
   </body>
